--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
     </div>
     <hr>
     <div>
-        <h1>Четвертое задание</h1>
-        <div class="out1"></div>
+        <h1>Третье задание</h1>
+        <input type="text1" class="text1" placeholder="Введите число ">
         <button class="btn1">Нажмите</button>
+        <div class="out1"></div>
+    </div>
+    <hr>
+    <div>
+        <h1>Четвертое задание</h1>
         <div class="out2"></div>
+        <button class="btn2">Нажмите</button>
+        <div class="out3"></div>
 
     </div>
     <hr>
