исправление третьего задания

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div>
         <h1>Третье задание</h1>
         <input type="text1" class="text1" placeholder="Введите число ">
-        <button class="btn1">Нажмите</button>
+        <button class="btn1">Проверить</button>
         <div class="out1"></div>
     </div>
     <hr>
